--- a/src/SyncMe/SyncMe/SyncMe/SyncMe.csproj
+++ b/src/SyncMe/SyncMe/SyncMe/SyncMe.csproj
@@ -7,7 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
         <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Views\NotesPage.xaml.cs">
+        <DependentUpon>NotesPage.xaml</DependentUpon>
+      </Compile>
     </ItemGroup>
 </Project>
