--- a/src/SyncMe/SyncMe/SyncMe.Android/SyncMe.Android.csproj
+++ b/src/SyncMe/SyncMe/SyncMe.Android/SyncMe.Android.csproj
@@ -62,7 +62,11 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Alarm\AlarmSetter.cs" />
+    <Compile Include="Alarm\AlarmReceiver.cs" />
+    <Compile Include="Alarm\IAlarmSetter.cs" />
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="GlobalUsings.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
