--- a/src/SyncMe/SyncMe/SyncMe.Android/SyncMe.Android.csproj
+++ b/src/SyncMe/SyncMe/SyncMe.Android/SyncMe.Android.csproj
@@ -62,9 +62,12 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Alarm\AlarmSetter.cs" />
+    <Compile Include="Alarm\AlarmMessage.cs" />
+    <Compile Include="Alarm\AndroidAlarmSetter.cs" />
     <Compile Include="Alarm\AlarmReceiver.cs" />
-    <Compile Include="Alarm\IAlarmSetter.cs" />
+    <Compile Include="Alarm\AndroidAlarmPlayer.cs" />
+    <Compile Include="IsExternalInit.cs" />
+    <Compile Include="Alarm\AndroidNotificationManager.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="GlobalUsings.cs" />
     <Compile Include="MainActivity.cs" />
