--- a/src/SyncMe/SyncMe/SyncMe.Android/SyncMe.Android.csproj
+++ b/src/SyncMe/SyncMe/SyncMe.Android/SyncMe.Android.csproj
@@ -60,6 +60,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Plugin.Calendar">
+      <Version>1.4.5304</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Alarm\AlarmSetter.cs" />
