--- a/src/SyncMe/SyncMe/SyncMe/SyncMe.csproj
+++ b/src/SyncMe/SyncMe/SyncMe/SyncMe.csproj
@@ -15,14 +15,17 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Compile Update="Views\EventAlert.xaml.cs">
+        <DependentUpon>EventAlert.xaml</DependentUpon>
+      </Compile>
+      <Compile Update="Views\CreateEvent.xaml.cs">
+        <DependentUpon>CreateEvent.xaml</DependentUpon>
+      </Compile>
       <Compile Update="Views\NotesPage.xaml.cs">
         <DependentUpon>NotesPage.xaml</DependentUpon>
       </Compile>
+      <Compile Update="Views\DayView.xaml.cs">
+        <DependentUpon>DayView.xaml</DependentUpon>
+      </Compile>
     </ItemGroup>
-    </ItemGroup>
-
-    <ItemGroup>
-      <EmbeddedResource Update="Views\DayView.xaml">
-        <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-      </EmbeddedResource>
 </Project>
