--- a/src/SyncMe/SyncMe/SyncMe/SyncMe.csproj
+++ b/src/SyncMe/SyncMe/SyncMe/SyncMe.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.CSharp" Version="4.0.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Graph" Version="3.35.0" />
         <PackageReference Include="System.Reactive" Version="5.0.0" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
         <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
