--- a/src/SyncMe/SyncMe/SyncMe.Android/Properties/AndroidManifest.xml
+++ b/src/SyncMe/SyncMe/SyncMe.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.syncme" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="28" android:targetSdkVersion="31" />
-	<application android:label="SyncMe.Android" android:theme="@style/MainTheme"></application>
+	<application android:label="SyncMe" android:theme="@style/MainTheme"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
