#added event schedule

--- a/src/SyncMe/SyncMe/SyncMe/SyncMe.csproj
+++ b/src/SyncMe/SyncMe/SyncMe/SyncMe.csproj
@@ -34,4 +34,10 @@
     <ItemGroup>
       <Folder Include="Services\" />
     </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Update="Views\EventSchedule.xaml">
+        <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      </EmbeddedResource>
+    </ItemGroup>
 </Project>
