--- a/src/SyncMe/SyncMe/SyncMe.Android/SyncMe.Android.csproj
+++ b/src/SyncMe/SyncMe/SyncMe.Android/SyncMe.Android.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Alarm\AlarmMessage.cs" />
     <Compile Include="Alarm\AndroidAlarmIntent.cs" />
     <Compile Include="Alarm\AndroidAlarmPlayer.cs" />
+    <Compile Include="Extensions\IntentExtensions.cs" />
     <Compile Include="IsExternalInit.cs" />
     <Compile Include="Alarm\AndroidNotificationManager.cs" />
     <Compile Include="Bootstrapper.cs" />
