--- a/src/SyncMe/SyncMe/SyncMe.Android/Properties/AndroidManifest.xml
+++ b/src/SyncMe/SyncMe/SyncMe.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.syncme" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="28" android:targetSdkVersion="31" />
-	<application android:label="SyncMe.Android" android:theme="@style/MainTheme"></application>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.SyncMe">
+  <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
+  <application android:label="SyncMe.Android" android:theme="@style/MainTheme">
+    <activity android:name="microsoft.identity.client.BrowserTabActivity" android:configChanges="orientation|screenSize">
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="msauth" android:host="com.companyname.SyncMe" />
+      </intent-filter>
+    </activity>
+  </application>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
