--- a/src/SyncMe/SyncMe/SyncMe.Android/Properties/AndroidManifest.xml
+++ b/src/SyncMe/SyncMe/SyncMe.Android/Properties/AndroidManifest.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.SyncMe">
-  <uses-sdk android:minSdkVersion="28" android:targetSdkVersion="31" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.syncme">
+  <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
   <application android:label="SyncMe" android:theme="@style/MainTheme">
-    <activity android:name="microsoft.identity.client.BrowserTabActivity" android:configChanges="orientation|screenSize">
+    <activity android:name="microsoft.identity.client.BrowserTabActivity" android:configChanges="orientation|screenSize" android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
         <category android:name="android.intent.category.DEFAULT" />
