--- a/src/SyncMe/SyncMe/SyncMe.Android/SyncMe.Android.csproj
+++ b/src/SyncMe/SyncMe/SyncMe.Android/SyncMe.Android.csproj
@@ -84,6 +84,8 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Alarm\AlarmReceiver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderes\AutoSuggestBoxRendererForAndroid.cs" />
+    <Compile Include="Renderes\EntryRendererForAndroid.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="SplashActivity.cs" />
   </ItemGroup>
@@ -135,6 +137,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon_plus_minor.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\my_cursor.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
