--- a/src/SyncMe/SyncMe.Common/SyncMe.Common.csproj
+++ b/src/SyncMe/SyncMe.Common/SyncMe.Common.csproj
@@ -3,12 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>Latest</LangVersion>
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.5.0" />
-    <PackageReference Include="Microsoft.Graph" Version="3.35.0" />
-  </ItemGroup>
 
 </Project>
