--- a/src/SyncMe/SyncMe/SyncMe.Android/SyncMe.Android.csproj
+++ b/src/SyncMe/SyncMe/SyncMe.Android/SyncMe.Android.csproj
@@ -137,5 +137,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon_plus_minor.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon_trash.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
