--- a/src/SyncMe/SyncMe.CalendarProviders/SyncMe.CalendarProviders.csproj
+++ b/src/SyncMe/SyncMe.CalendarProviders/SyncMe.CalendarProviders.csproj
@@ -1,18 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>Latest</LangVersion>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<LangVersion>Latest</LangVersion>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.5.0" />
-    <PackageReference Include="Microsoft.Graph" Version="3.35.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Azure.Identity" Version="1.5.0" />
+		<PackageReference Include="Microsoft.Graph" Version="3.35.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\SyncMe.Common\SyncMe.Common.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\SyncMe.Common\SyncMe.Common.csproj" />
+	</ItemGroup>
 
 </Project>
