--- a/src/SyncMe/SyncMe.Android/SyncMe.Android.csproj
+++ b/src/SyncMe/SyncMe.Android/SyncMe.Android.csproj
@@ -72,11 +72,12 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Alarm\MessageKeys.cs" />
     <Compile Include="Alarm\AndroidAlarmService.cs" />
+    <Compile Include="Alarm\MessageKeys.cs" />
+    <Compile Include="Alarm\AndroidAlarmProcessor.cs" />
     <Compile Include="Alarm\AndroidAlarmPlayer.cs" />
     <Compile Include="Alarm\IAndroidAlarmPlayer.cs" />
-    <Compile Include="Alarm\IAndroidAlarmService.cs" />
+    <Compile Include="Alarm\IAndroidAlarmProcessor.cs" />
     <Compile Include="Extensions\IntentExtensions.cs" />
     <Compile Include="Properties\IsExternalInit.cs" />
     <Compile Include="Alarm\AndroidNotificationManager.cs" />
