add syncevent context

--- a/src/SyncMe/SyncMe.Android/SyncMe.Android.csproj
+++ b/src/SyncMe/SyncMe.Android/SyncMe.Android.csproj
@@ -211,6 +211,10 @@
       <Project>{73ebc701-ffe2-4947-9cc5-8da43989c673}</Project>
       <Name>SyncMe.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SyncMe.DataAccess\SyncMe.DataAccess.csproj">
+      <Project>{f2014c1a-cbff-4e29-84a3-46b25ea490f8}</Project>
+      <Name>SyncMe.DataAccess</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SyncMe.Lib\SyncMe.Lib.csproj">
       <Project>{cbf244c3-66f4-437b-b60a-290cc59b66ec}</Project>
       <Name>SyncMe.Lib</Name>
