--- a/src/SyncMe/SyncMe.DataAccess/SyncMe.DataAccess.csproj
+++ b/src/SyncMe/SyncMe.DataAccess/SyncMe.DataAccess.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,9 +6,10 @@
 	  <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.21" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="LiteDB" Version="5.0.11" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\SyncMe.Common\SyncMe.Common.csproj" />
