--- a/src/SyncMe/SyncMe.Android/SyncMe.Android.csproj
+++ b/src/SyncMe/SyncMe.Android/SyncMe.Android.csproj
@@ -59,11 +59,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection">
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
       <Version>6.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Graph">
       <Version>3.35.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Sinks.Xamarin">
+      <Version>0.2.0.64</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
@@ -76,15 +79,19 @@
     <Compile Include="Alarm\MessageKeys.cs" />
     <Compile Include="Alarm\AndroidAlarmPlayer.cs" />
     <Compile Include="Extensions\IntentExtensions.cs" />
+    <Compile Include="Extensions\SerilogExtensions.cs" />
+    <Compile Include="Extensions\ServiceCollectionExtensions.cs" />
     <Compile Include="Properties\IsExternalInit.cs" />
     <Compile Include="Alarm\AndroidNotificationManager.cs" />
-    <Compile Include="Bootstrapper.cs" />
     <Compile Include="Properties\GlobalUsings.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Alarm\AlarmReceiver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="SplashActivity.cs" />
+    <Compile Include="AndroidStarter.cs" />
+    <Compile Include="Utilites\AndroidBootstrapper.cs" />
+    <Compile Include="Utilites\AndroidPathProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
