--- a/src/SyncMe/SyncMe.DataAccess/SyncMe.DataAccess.csproj
+++ b/src/SyncMe/SyncMe.DataAccess/SyncMe.DataAccess.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
 	  <LangVersion>Latest</LangVersion>
 	  <ImplicitUsings>enable</ImplicitUsings>
+	  <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
