--- a/src/SyncMe/SyncMe.IOS/SyncMe.IOS.csproj
+++ b/src/SyncMe/SyncMe.IOS/SyncMe.IOS.csproj
@@ -64,9 +64,14 @@
     <AppExtensionDebugBundleId />
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Extensions\SerilogExtensions.cs" />
+    <Compile Include="Extensions\ServiceColletionExtensions.cs" />
+    <Compile Include="IOSAlarmService.cs" />
+    <Compile Include="IOSStarter.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Utilities\IOSBootstrapper.cs" />
+    <Compile Include="Utilities\IOSPathProvider.cs" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="Resources\LaunchScreen.storyboard" />
@@ -138,6 +143,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
       <Version>6.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Sinks.Xamarin">
+      <Version>0.2.0.64</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="Xamarin.Forms">
