#added auth to ios app; added custon entitlements; added keychain entitlement; added lauch screen icons; removed landscape orientations

--- a/src/SyncMe/SyncMe.IOS/Info.plist
+++ b/src/SyncMe/SyncMe.IOS/Info.plist
@@ -10,8 +10,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -25,14 +23,14 @@
 	<key>CFBundleDisplayName</key>
 	<string>SyncMe</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.SyncMe.IOS</string>
+	<string>com.companyname.SyncMe</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>SyncMe.IOS</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 </dict>
 </plist>
