--- a/src/SyncMe/SyncMe.Lib/SyncMe.Lib.csproj
+++ b/src/SyncMe/SyncMe.Lib/SyncMe.Lib.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\icon_about.png" />
+	  <None Remove="Resources\icon_add_event.png" />
 	  <None Remove="Resources\icon_identities.png" />
 	  <None Remove="Resources\icon_namespaces.png" />
 	  <None Remove="Resources\icon_open_calendar.png" />
@@ -16,13 +17,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Include="Resources\icon_add_event.png" />
 	  <EmbeddedResource Include="Resources\icon_settings.png" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <EmbeddedResource Include="Resources\icon_about.png">
-	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-	  </EmbeddedResource>
+    <EmbeddedResource Include="Resources\icon_about.png" />
 	  <EmbeddedResource Include="Resources\icon_identities.png" />
 	  <EmbeddedResource Include="Resources\icon_namespaces.png" />
 	  <EmbeddedResource Include="Resources\icon_open_calendar.png" />
