--- a/src/SyncMe/SyncMe.Common/SyncMe.Common.csproj
+++ b/src/SyncMe/SyncMe.Common/SyncMe.Common.csproj
@@ -8,4 +8,17 @@
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Split(".")[0])</RootNamespace>
 	</PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="LanguageExt.Core" Version="3.4.10" />
+
+		<PackageReference Include="LanguageExt.CodeGen" Version="3.4.10"
+                          PrivateAssets="all" />
+
+		<PackageReference Include="CodeGeneration.Roslyn.BuildTime"
+                          Version="0.6.1"
+                          PrivateAssets="all" />
+
+		<DotNetCliToolReference Include="dotnet-codegen" Version="0.6.1" />
+	</ItemGroup>
+
 </Project>
