--- a/src/SyncMe/SyncMe.Outlook/SyncMe.Outlook.csproj
+++ b/src/SyncMe/SyncMe.Outlook/SyncMe.Outlook.csproj
@@ -9,7 +9,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="Azure.Identity" Version="1.5.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Graph" Version="3.35.0" />
+		<PackageReference Include="System.Reactive" Version="5.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
