#removed useless resource; renamed app icon

--- a/src/SyncMe/SyncMe.Android/Properties/AndroidManifest.xml
+++ b/src/SyncMe/SyncMe.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="10225" android:versionName="1.1.10225" package="com.companyname.syncme" android:installLocation="auto">
   <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
-  <application android:label="SyncMe" android:theme="@style/MainTheme" android:icon="@mipmap/SyncMeApp">
+  <application android:label="SyncMe" android:theme="@style/MainTheme" android:icon="@mipmap/icon_syncme">
     <activity android:name="microsoft.identity.client.BrowserTabActivity" android:configChanges="orientation|screenSize" android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
