--- a/src/SyncMe/SyncMe.IOS/Info.plist
+++ b/src/SyncMe/SyncMe.IOS/Info.plist
@@ -33,5 +33,7 @@
     <string>LaunchScreen</string>
     <key>CFBundleShortVersionString</key>
     <string>1.1.10225</string>
+    <key>NSCalendarsUsageDescription</key>
+    <string>Add calendar events</string>
   </dict>
 </plist>
