--- a/src/SyncMe/SyncMe.IOS/SyncMe.IOS.csproj
+++ b/src/SyncMe/SyncMe.IOS/SyncMe.IOS.csproj
@@ -68,9 +68,10 @@
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Extensions\NSDataExtensions.cs" />
     <Compile Include="Extensions\SerilogExtensions.cs" />
     <Compile Include="Extensions\ServiceColletionExtensions.cs" />
-    <Compile Include="IOSAlarmService.cs" />
+    <Compile Include="Alarm\IOSAlarmService.cs" />
     <Compile Include="IOSStarter.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
@@ -147,6 +148,9 @@
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.Xamarin">
       <Version>0.2.0.64</Version>
+    </PackageReference>
+    <PackageReference Include="Toast.iOS">
+      <Version>1.2.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms">
